修改sdk的依赖方式

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,18 @@
 .cxx
 local.properties
 app/
+
+*.bin
+anythink_banner/build/
+anythink_china_core/build/
+anythink_core/build/
+anythink_intersitial/build/
+anythink_native/build/
+anythink_network_baidu/build/
+anythink_network_kuaishou/build/
+anythink_rewardvideo/build/
+anythink_splash/build/
+Baidu_MobAds_SDK-release_v9.19/build/
+kssdk-ad-3.3.21/build/
+godot-lib.release/build/
+tramini_sdk/build/
