--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,16 @@
+include ':kssdk-ad-3.3.21'
+include ':tramini_sdk'
+include ':Baidu_MobAds_SDK-release_v9.19'
+include ':anythink_network_kuaishou'
+include ':anythink_network_baidu'
+include ':anythink_splash'
+include ':anythink_rewardvideo'
+include ':anythink_native'
+include ':anythink_interstitial'
+include ':anythink_core'
+include ':anythink_banner'
+include ':anythink_china_core'
 include ':godot-lib.release'
 include ':ToponGodot'
-include ':app'
+include ':localReop:anythink_china_core'
 rootProject.name = "ToponGodot"
